@@ -1,5 +1,5 @@
 /*
- * $Id: wxt.trm,v 1.24 2009/03/26 00:49:27 sfeam Exp $
+ * $Id: wxt.trm,v 1.25 2009/06/13 05:23:56 sfeam Exp $
  */
 
 /* GNUPLOT - wxt.trm */
@@ -59,6 +59,8 @@ TERM_PUBLIC void wxt_text_wrapper __PROTO ((void));
 /* terminal state, defined extern in wxt_term.h */
 int wxt_window_number = 0;
 TBOOLEAN wxt_enhanced_enabled = FALSE;
+TBOOLEAN wxt_dashed = FALSE;
+double wxt_dashlength = 1.0;
 int wxt_persist = UNSET;
 int wxt_raise = UNSET;
 int wxt_ctrl = UNSET;
@@ -93,6 +95,9 @@ enum WXT_id {
     WXT_CLOSE,
     WXT_ROUNDED,
     WXT_BUTT,
+    WXT_SOLID,
+    WXT_DASHED,
+    WXT_DASHLENGTH,
     WXT_OTHER
 };
 
@@ -111,6 +116,10 @@ static struct gen_table wxt_opts[] = {
     {"cl$ose", WXT_CLOSE},
     {"round$ed", WXT_ROUNDED},
     {"butt", WXT_BUTT},
+    {"solid", WXT_SOLID},
+    {"dash$ed", WXT_DASHED},
+    {"dashl$ength", WXT_DASHLENGTH},
+    {"dl", WXT_DASHLENGTH},
     {NULL, WXT_OTHER}
 };
 
@@ -246,6 +255,20 @@ TERM_PUBLIC void wxt_options()
 			wxt_rounded = no;
 			set_capjoin = TRUE;
 			break;
+		case WXT_DASHED:
+			c_token++;
+			wxt_dashed = TRUE;
+			break;
+		case WXT_DASHLENGTH:
+			c_token++;
+			wxt_dashlength = real_expression();
+			if (wxt_dashlength <= 0)
+			    wxt_dashlength = 1.0;
+			break;
+		case WXT_SOLID:
+			c_token++;
+			wxt_dashed = FALSE;
+			break;
 		case WXT_OTHER:
 		default:
 			wxt_window_number = int_expression();
@@ -268,6 +291,15 @@ TERM_PUBLIC void wxt_options()
 		strncat(term_options, wxt_title, sizeof(term_options)-strlen(term_options));
 		strncat(term_options, "\"", sizeof(term_options)-strlen(term_options));
 		wxt_update_title(wxt_window_number);
+	}
+
+	if (wxt_dashed)
+		strncat(term_options, " dashed",  sizeof(term_options)-strlen(term_options));
+
+	if (wxt_dashlength != 1.0) {
+		char tmp_term_options[MAX_LINE_LEN+1] = "";
+		snprintf(tmp_term_options,sizeof(tmp_term_options), " dashlength %g", wxt_dashlength);
+		strncat(term_options, tmp_term_options, sizeof(term_options)-strlen(term_options));
 	}
 
 	if (set_size) {
@@ -356,7 +388,7 @@ TERM_TABLE_START (wxt_driver)
     wxt_text_angle, wxt_justify_text,
     wxt_point, do_arrow, wxt_set_font,
     wxt_pointsize,
-    TERM_CAN_MULTIPLOT|TERM_NO_OUTPUTFILE|TERM_ALPHA_CHANNEL,
+    TERM_CAN_MULTIPLOT|TERM_NO_OUTPUTFILE|TERM_ALPHA_CHANNEL|TERM_CAN_DASH,
     wxt_text /* suspend */, 0 /* resume */, wxt_fillbox, wxt_linewidth
 #ifdef USE_MOUSE
     , wxt_waitforinput, wxt_put_tmptext, wxt_set_ruler, wxt_set_cursor, wxt_set_clipboard
@@ -391,6 +423,7 @@ START_HELP(wxt)
 "                      {{no}enhanced}",
 "                      {font <font>}",
 "                      {title \"title\"}",
+"                      {dashed|solid} {dashlength <dl>}",
 "                      {{no}persist}",
 "                      {{no}raise}",
 "                      {{no}ctrl}",
