@@ -1,3 +1,8 @@
+2009-06-12  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/wxterminal/wxt_gui.cpp src/wxterminal/wxt_term.h term/wxt.trm:
+	set term wxt {dashed} {dashlength <dl>}
+
 2009-06-11  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/wxterminal/wxt_gui.cpp (wxt_set_color):  plot .. lc N should take
